Add public gateway instructions

--- a/index.html
+++ b/index.html
@@ -98,8 +98,15 @@ Spork powers ACTIVATED
   - Mode: Reverse proxy
   - Listening on whattzzuu5drxwdwi6xbijjf7yt56l5adzht7j7kjvfped7amova
   - Proxying all traffic to localhost:8080
-======================</div></pre>
+======================
+
+If you're running an HTTP server, you can share the following link:
+
+  https://whattzzuu5drxwdwi6xbijjf7yt56l5adzht7j7kjvfped7amova.atek.app/
+
+This public gateway will tunnel directly to your spork!</div></pre>
         <p>As long as that spork command is running, our web app will be available at <code>whattzzuu5drxwdwi6xbijjf7yt56l5adzht7j7kjvfped7amova</code>.</p>
+        <p>Also notice that HTTP apps can use the <a href="https://atek.app/" title="Public Gateway">public gateway at atek.app</a>. Note, however, a public gateway will see the traffic so you lose end-to-end privacy.</p>
       </div>
 
       <div class="instructions">
