Tweak description of beaker team involvement

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <p>
           <strong>Spork</strong> is a command-line tool for <a href="https://github.com/hyperswarm/dht" title="Hyperswarm peer-to-peer network">peer-to-peer sockets</a>
-          created by the people behind <a href="https://beakerbrowser.com" title="Beaker Browser">Beaker Browser</a>
+          from the creator of the <a href="https://beakerbrowser.com" title="Beaker Browser">Beaker Browser</a>
           and part of the new <a href="https://atek.cloud" title="Atek Cloud">Atek Cloud project</a>.
           <strong>Self host your life!</strong>
         </p>
